[project]
name = "hy3d-reference"
version = "0.1.0"
description = "PyTorch reference for Hunyuan3D-2.1 verification"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "torchvision",
    "safetensors",
    "numpy",
    "Pillow",
    "transformers",
    "pyyaml",
    "trimesh",
    "einops",
    "diffusers",
    "scikit-image",
    "timm>=1.0.26",
    "omegaconf>=2.3.0",
    "opencv-python>=4.13.0.92",
    "pymeshlab>=2025.7.post1",
    "accelerate>=1.13.0",
    "pygltflib>=1.16.5",
    "xatlas>=0.0.11",
    "basicsr>=1.4.2",
    "realesrgan>=0.3.0",
    "pybind11>=3.0.3",
    "pytorch-lightning>=2.6.1",
    "fast-simplification>=0.1.13",
]
